examples/bad/hold_loop_match_product_exit.mko
// EXPECT: use of moved
// Match partial product inside loop poisons post-loop use of either field.
struct Pair {
    a: string
    b: string
}

fn main() {
    hold let p = Pair { a: "x", b: "y" }
    let mut i = 0
    while i < 1 {
        let _ = match i {
            0 => {
                let x = p.a
                len(x)
            },
            _ => {
                let y = p.b
                len(y)
            },
        }
        i = i + 1
    }
    print(p.b)
}
